fix img stretching on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@ a:hover {
 
 img {
     width: 100%;
+    max-width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 /* main div for all content */
